addons/dark_mode_backend/static/src/scss/theme.scss
/* ... */
.picker-switch {
    span.fa {
        margin: 0;
        @include transition($btn-transition);

        &.primary {
            background-color: $primary;
            color: white;

            &:hover {
                background-color: darken($primary, 20%);
            }
        }
    }
}

.daterangepicker .drp-calendar .calendar-table thead tr:first-child {
    color: #FFFFFF;
    background-color: $primary;
}

.daterangepicker .drp-calendar .calendar-table tbody tr td:not(.off).active,
.daterangepicker .drp-calendar .calendar-table tbody tr td:not(.off).active:hover {
    background-color: $primary;
}

.daterangepicker .drp-calendar .calendar-table thead tr:first-child th.prev:hover,
.daterangepicker .drp-calendar .calendar-table thead tr:first-child th.next:hover {
    background-color: darken($primary, 20%);
}

.oe-toolbar.oe-floating {
    background: #112222 !important;
}

.note-editable {
    background: #444547 !important;
    border: none !important;
}

//Responsive ends
.bg-white {
    background: none !important;
}

.o_search_panel_section_header {
    color: $selected_row  !important;
}

.o_search_panel_counter {
    color: $selected_row  !important;
}

.text-muted {
    color: #fff !important;
}

.bg-white .text-muted,
.o_colored_level .bg-white .text-muted {
    color: #fff !important;
}

.border-bottom {
    border-bottom: none !important;
}

.o_facet_values {
    border: none !important;
    background-color: #262A36 !important;
    height: 90% !important;
    color: white;
}

/* .o_searchview .o_searchview_facet .o_facet_values {
    direction: ltr;
    padding: 5px;
} */

.o_notebook .nav {
    background-color: $primary-darkmode;
}

.o_legacy_list_view .o_list_table {
    background-color: $primary-darkmode;
}

.o_legacy_form_view .o_form_statusbar {
    background-color: $primary-darkmode;
}

.o_ThreadView {
    background-color: $primary-darkmode  !important;
    //padding: 30px !important;
}

.form-check-input {
    width: 1em;
    max-height: 1em;
}

.o_legacy_list_view thead {
    background-color: $primary-darkmode  !important;
}

.o_legacy_list_view .o_list_table thead {
    color: $selected_row;
}

.o_kanban_ghost {
    display: none;
}

.o_ThreadViewTopbar_threadName {
    border: none;
}

.o_main_navbar .o_menu_sections .o_nav_entry,
.o_main_navbar .o_menu_sections .dropdown-toggle {
    background: #1f1f2b !important;
    border: 1px solid transparent;
}

.o_kanban_view.o_modules_kanban .o_kanban_renderer .oe_module_vignette,
.o_modules_field .o_modules_kanban .oe_module_vignette {
    background: #262A36;
}

.o_kanban_renderer.o_kanban_ungrouped {
    --Kanban-padding: var(--KanbanRecord-margin-v) var(--KanbanRecord-margin-h);
    background: #1f1f2b !important;
}

/* section, .oe_img_bg, [data-oe-shape-data], section > *, .oe_img_bg > *, [data-oe-shape-data] > * {
    background-color: black;
} */
.o_kanban_renderer .o_kanban_record>div:not(.o_dropdown_kanban),
.o_kanban_renderer .o_kanban_quick_create {
    border: 1px solid #4d4d4ee8;
    background-color: white;
}

.bg-view,
.text-bg-view {
    background-color: #262A36 !important;
}

.o-mail-DiscussSidebar-item:hover,
.o-mail-DiscussSidebar-item.o-active {
    background-color: black !important;
}

.btn-secondary {
    background-color: #050505 !important;
    border-color: #0d0e0e !important;
    color: white !important;
}

.border-top {
    border-top: 0px solid #3e4043 !important;
}

.border-end {
    border-right: 1px solid #3e4043 !important;
}

.rounded-3 {
    border-radius: 0.375rem !important;
}

.text-truncate {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    color: white !important;
}

.text-uppercase {
    text-transform: uppercase !important;
    color: darkgray;
}

.border {
    border: 1px solid #656b70 !important;
}

.o-mail-Composer-actions button {
    opacity: 75%;
    color: #a69f9f;
}

.o-mail-Composer-bg {
    background-color: #343443;
}

.o-mail-Composer-input {
    background-color: white !important;
}

.o_onboarding_main {
    background: linear-gradient(#3c3f42 0%, #2f2531e3) !important;
}

o_main_navbar .o_menu_sections .o_nav_entry,
.o_main_navbar .o_menu_sections .dropdown-toggle {
    background: #1f1f2b !important;
    border: 1px solid transparent;
}

.dropdown-menu {
    background-color: #393940 !important;
    color: #6a6b71 !important;
}

.o_menu_systray {
    align-items: center;
}


.o_facet_value {
    FONT-SIZE: 0.75REM;
}

.o_searchview_input_container {
    align-items: center;
}

.o_facet_remove {
    padding: 0 10px !important;
    max-height: 30px;
}

.o_facet_values{
    border: none !important;
    background-color: #262A36 !important;
    height: 90% !important;
    color: white;
    height: 30px !important;
}

.o_searchview_facet .o_searchview_facet_label {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 62% !important;

    span.position-absolute {
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 0.5rem;

        &:hover {
            display: flex;
            align-items: center;
            justify-content: center;
            border-radius: 0.5rem;
        }
    }
}

.o_searchview {
    border: none !important;
}

.btn.o_searchview_dropdown_toggler {
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
}

.o_kanban_renderer {
    --Kanban-background: #414345;
}

.o_kanban_renderer .o_kanban_record>div:not(.o_dropdown_kanban),
.o_kanban_renderer .o_kanban_quick_create {
    border: 1px solid #4d4d4ee8;
    background-color: #262A36;
}

.o_kanban_renderer {
    --Kanban-background: #1b1d1e;
}

.o_kanban_record_title {
    color: #a0a5a9 !important;
}

.fc-slats {
    background-color: black !important;
}

.fc-widget-header {
    background-color: black !important;
}

.fc-bg {
    background-color: black !important;
}
/* ... */

