Fix text truncate bg  color

--- a/addons/dark_mode_backend/static/src/scss/theme.scss
+++ b/addons/dark_mode_backend/static/src/scss/theme.scss
@@ -3054,7 +3054,7 @@ div.dropdown-menu.bootstrap-datetimepicker-widget {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color: white !important;
+    /*color: white !important;*/
 }
 
 .text-uppercase {
